--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
             <version>8.0.33</version>
         </dependency>
 
+        <!--Lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!--Testes-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
